# KHB_Practice

./: .gitignore  notes.md  pyproject.toml
T01/: bot.py
T02/: bot2.py  flow.md  observers_handlers.py
T03/: bot3.py  flow.md  observers_handlers.py
T04/: audio_handlers.py  bot4.py  observers.py  prompts.py
T05/: prompts.py  pyproject.toml
T06/: bot_flow.py  nodes.py  observer.py
T07/: main.py  nodes.py  observer.py
T08/: flow-example.py
T09/: message.py
T2/: prompts.py  test_cases.md
T3/: audio_handlers.py  prompts.py  test_cases.md
T4/: audio_handlers.py  bot4.py  observers.py  prompts.py
T5/: bot5.py  observers.py
T6/: bot_flow.py  flow.md  nodes.py  observer.py
T7/: bot_dynamic_flow.py
